Trying something different. Removed sport from path
