# openapi.yaml
@@ -13,7 +13,7 @@ paths:
             responses:
                 "200":
                     description: OK
-    /sports/{sport}/odds:
+    /sports/odds:
         get:
             operationId: getOdds
             summary: Returns a list of upcoming and live games with recent odds
@@ -21,7 +21,7 @@ paths:
                 Retrieves odds for a given sport, region, and market. It includes
                 upcoming and live games.
             parameters:
-              - in: path
+              - in: query
                 name: sport
                 required: true
                 schema:
